# FPGATorch

./: .gitignore  ConvTranspose.py  MathOpSpec.md  MathOpsSummary.md  MatrixInterface.md  README.md  resampling.py
DE10_Standard_GHRD/: 7segmentDisplay.sv  DE10_Standard_GHRD.qsf  DE10_Standard_GHRD.qws  DE10_Standard_GHRD.v  DE10_Standard_GHRD_assignment_defaults.qdf  M10KControl.sv  Macro.svh  Macro_old.svh  MatMul_large.sv  SystolicArray.sv  SystolicArray.sv.bak  add_cycle_7_area.v  basic_func.sv  basic_func.sv.bak  basic_func_old.sv  cr_ie_info.json  hps_0.h  hw6library.sv  hw6library.sv.bak  soc_system.qsys  soc_system.sopcinfo
DE10_Standard_GHRD/.qsys_edit/: preferences.xml  soc_system.xml  soc_system_schematic.nlv
DE10_Standard_GHRD/db/: .cmp.kpt  DE10_Standard_GHRD.(0).cnf.cdb  DE10_Standard_GHRD.(0).cnf.hdb  DE10_Standard_GHRD.(1).cnf.cdb  DE10_Standard_GHRD.(1).cnf.hdb  DE10_Standard_GHRD.(10).cnf.cdb  DE10_Standard_GHRD.(10).cnf.hdb  DE10_Standard_GHRD.(100).cnf.cdb  DE10_Standard_GHRD.(100).cnf.hdb  DE10_Standard_GHRD.(101).cnf.cdb  DE10_Standard_GHRD.(101).cnf.hdb  DE10_Standard_GHRD.(102).cnf.cdb  DE10_Standard_GHRD.(102).cnf.hdb  DE10_Standard_GHRD.(103).cnf.cdb  DE10_Standard_GHRD.(103).cnf.hdb  DE10_Standard_GHRD.(104).cnf.cdb  DE10_Standard_GHRD.(104).cnf.hdb  DE10_Standard_GHRD.(105).cnf.cdb  DE10_Standard_GHRD.(105).cnf.hdb  DE10_Standard_GHRD.(106).cnf.cdb  DE10_Standard_GHRD.(106).cnf.hdb  DE10_Standard_GHRD.(107).cnf.cdb  DE10_Standard_GHRD.(107).cnf.hdb  DE10_Standard_GHRD.(108).cnf.cdb  DE10_Standard_GHRD.(108).cnf.hdb  DE10_Standard_GHRD.(109).cnf.cdb  DE10_Standard_GHRD.(109).cnf.hdb  DE10_Standard_GHRD.(11).cnf.cdb  DE10_Standard_GHRD.(11).cnf.hdb  DE10_Standard_GHRD.(110).cnf.cdb  DE10_Standard_GHRD.(110).cnf.hdb  DE10_Standard_GHRD.(111).cnf.cdb  DE10_Standard_GHRD.(111).cnf.hdb  DE10_Standard_GHRD.(112).cnf.cdb  DE10_Standard_GHRD.(112).cnf.hdb  DE10_Standard_GHRD.(113).cnf.cdb  DE10_Standard_GHRD.(113).cnf.hdb  DE10_Standard_GHRD.(114).cnf.cdb  DE10_Standard_GHRD.(114).cnf.hdb  DE10_Standard_GHRD.(115).cnf.cdb  (+574 more)
DE10_Standard_GHRD/greybox_tmp/: cbx_args.txt
DE10_Standard_GHRD/output_files/: DE10_Standard_GHRD.asm.rpt  DE10_Standard_GHRD.done  DE10_Standard_GHRD.fit.rpt  DE10_Standard_GHRD.fit.summary  DE10_Standard_GHRD.flow.rpt  DE10_Standard_GHRD.jdi  DE10_Standard_GHRD.map.rpt  DE10_Standard_GHRD.map.smsg  DE10_Standard_GHRD.map.summary  DE10_Standard_GHRD.pin  DE10_Standard_GHRD.sld  DE10_Standard_GHRD.sta.summary  serv_req_info.txt
DE10_Standard_GHRD/soc_system/: soc_system.bsf  soc_system.cmp  soc_system.html  soc_system.spd  soc_system.xml  soc_system_bb.v  soc_system_generation.rpt  soc_system_generation_previous.rpt  soc_system_inst.v  soc_system_inst.vhd
HPS_FPGA_LED/: HPS_FPGA_TEST  Makefile  hps_0.h  loadFromUSB.sh  main.c
Quartus_FP_IP/: RAM_2_Port.qip  RAM_2_Port.v
Quartus_FP_IP/m10k_1P/: m10k.qip  (+1 more)
RTL/: .restartSimSession.tcl.old  M10Control.sv  M10K.v  M10KControl.sv  Macro.svh  Makefile  MatMul_large.sv  SystolicArray.sv  SystolicArray_Driver_TB.sv  SystolicArray_TB.sv  SystolicArray_input_gen.py  basic_func.sv  basic_func.sv.bak  fakemem.sv  inter.vpd  library.sv  mem.mif  simv
fpga-torch/: CPUMatrix.c  Linear.c  Makefile  MatrixInterface.h  Operator.h  cpu_impl.c  operator.c  runner.c
python_impl/: Conv1d.py  activation.py  flatten.py  linear.py
src/: CMakeLists.txt  CSVDataset.h  Conv2d.py  DataConverter.py  MatrixInterface.h  Network.matrix  Utility.h  example-app.cpp  main.c
src/cpu_impl/: MatrixImplement.h
src/fpga_impl/: FPGAInterface.h  MatrixImplement.h
src/operator/: Linear.h  Module.h  Operator.h  ReLU.h  Sequential.h  SquareLoss.h  XEntropy.h
src/optim/: SGDOptimizer.h
(+279 files in other folders)
